Global Wrap Fixes

--- a/sass/_featured-stuff.scss
+++ b/sass/_featured-stuff.scss
@@ -15,7 +15,7 @@
     }
 
     @include breakpoint( small ) {
-        padding: $space-default-half * 3;
+        padding: ($space-default-half * 3) 0;
     }
 
     h1, h2, h3, h4, h5, h6 {
